--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+            android:value="AIzaSyDC0OGqvkUlruQdhqIIs9x6Q_C8lptZl0M" />
 
         <activity
             android:name=".MapsActivity"
